# unity-cpp-template

./: .gitignore  README.md
cpp/: .clang-format  CMakeLists.txt
cpp/include/: Library.hpp
cpp/src/: Example.cpp  Library.cpp
unity/Assets/Plugins/Linux/x86_64/: .keep
unity/Assets/Plugins/Win/x86_64/: .keep
unity/Assets/Scenes/: SampleScene.unity
unity/Assets/Scripts/: LoadLibrary.cs  UseLibrary.cs
